# matrix

./: CMakeLists.txt  README.md
inc/: double_operations.hpp  matrix.hpp  matrix_exceptions.hpp
src/: CMakeLists.txt  main.cc
test/: CMakeLists.txt  basic_test_gen.cc  numpy_ans_test.py  pytuhon_test.py  silly_test_gen.cc  simple_test_gen.cc  test.sh
test/big_tests/ans/: 04.ans
